Feature ETP-3584: Fix List.of varargs issue in widget handler tests